--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-    	<title>Relaxr</title>
+    	<title>Relaxr | Homepage</title>
     	<link rel="stylesheet" href="css/reset.css">
     	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,800" rel="stylesheet">
     	<link rel="stylesheet" href="css/style.css">
