--- a/starter_code/landing_page/landing_index.html
+++ b/starter_code/landing_page/landing_index.html
@@ -3,9 +3,9 @@
 <html>
 	<head>
     	<title>Relaxr | Homepage </title>
-    	<link rel="stylesheet" href="css/reset.css">
+    	<link rel="stylesheet" href="../landing_page/css/reset.css">
     	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,800" rel="stylesheet">
-    	<link rel="stylesheet" href="css/style.css">
+    	<link rel="stylesheet" href="../landing_page/css/style.css">
 		
 	</head>
 	<body>
