--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600,800" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
+  <script src="js/jquery-3.2.0.js"></script>
+  <script src="js/script.js"></script>
 </head>
 
 <body>
@@ -27,17 +29,19 @@
         <h1>How I implemented Relaxr in 2 weeks and changed my life.</h1>
         <img src="images/blog_photo1.jpg">
         <p class="text">
-        Artisan keytar enamel pin sartorial biodiesel, blue bottle mixtape pinterest selfies umami 8-bit pour-over paleo salvia gochujang. Tacos enamel pin narwhal 8-bit tattooed. Meh umami seitan humblebrag vegan chambray, cred everyday carry tofu. Woke thundercats poke neutra, tacos jianbing tote bag heirloom typewriter. Bitters fanny pack pok pok, shoreditch taxidermy artisan fap. Direct trade locavore succulents try-hard kombucha. Helvetica cray pug stumptown roof party.
+        Artisan keytar enamel pin sartorial biodiesel, blue bottle mixtape pinterest selfies umami 8-bit pour-over paleo salvia gochujang. Tacos enamel pin narwhal 8-bit tattooed. Meh umami seitan humblebrag vegan chambray, cred everyday carry tofu. <span class=moreContents>Woke thundercats poke neutra, tacos jianbing tote bag heirloom typewriter. Bitters fanny pack pok pok, shoreditch taxidermy artisan fap. Direct trade locavore succulents try-hard kombucha. Helvetica cray pug stumptown roof party.</span>
         </p>
-        <p class="read-more hover"><a href="" class="hover">Read more ></a></p>
+        <p class="readMore hover"><a href="" class="hover">Read more ></a></p>
+        <p class="readLess hover"><a href="" class="hover">Read less ></a></p>
       </section>
 
   		<section id="column-2" class="main-column">
         <h1>I traveled across the globe thanks to Relaxr’s Excel automation</h1>
         <img src="images/blog_photo2.jpg">
         <p class="text">
-        Craft beer cardigan paleo stumptown air plant vexillologist. Leggings green juice wayfarers, trust fund post-ironic cornhole dreamcatcher bushwick chambray selvage letterpress aesthetic next level tote bag direct trade. Godard coloring book bicycle rights polaroid, hell of 8-bit venmo banh mi. Hoodie live-edge YOLO PBR&B, narwhal poutine keytar. Af hell of fanny pack craft beer. Pickled succulents marfa, portland pop-up hell of actually green juice. Kitsch before they sold out kale chips selvage, semiotics succulents franzen humblebrag.</p>
-        <p class="read-more hover"><a href="" class="hover">Read more ></a></p>
+        Craft beer cardigan paleo stumptown air plant vexillologist. Leggings green juice wayfarers, trust fund post-ironic cornhole dreamcatcher bushwick chambray selvage letterpress aesthetic next level tote bag direct trade. Godard coloring book bicycle rights polaroid, hell of 8-bit venmo banh mi. <span class=moreContents>Hoodie live-edge YOLO PBR&B, narwhal poutine keytar. Af hell of fanny pack craft beer. Pickled succulents marfa, portland pop-up hell of actually green juice. Kitsch before they sold out kale chips selvage, semiotics succulents franzen humblebrag.</span></p>
+        <p class="readMore hover"><a href="" class="hover">Read more ></a></p>
+        <p class="readLess hover"><a href="" class="hover">Read less ></a></p>
       </section>
 
   		<section id="sidebar">
@@ -51,14 +55,14 @@
         </ul>
   			<h3>About Relaxr</h3>
         <div class="sidebar-content">
-          <p id="about-relaxr">Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.</p>
-          <p id="learn-more"><a href="" class="hover">Learn More</a></p>
+          <p id="about-relaxr">Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. <span id="learnContents">Fusce porttitor, sapien sed tincidunt fringilla.</span></p>
+          <p id="learnMore"><a href="" class="hover">Learn More</a></p>
         </div>
   			<aside id="ad-unit"><img src="images/ad-unit.png"></aside>
   		</section>
     </div>
     
-    <aside id="button"><a href="" onclick="myFunction()">Sign Up Now!</a></aside>
+    <aside id="button"><a href="">Sign Up Now!</a></aside>
 	
   	<footer>
   		<div class="logo">Relaxr</div>
@@ -69,11 +73,6 @@
 
   </div>
 
-  <script>
-    function myFunction() {
-      alert("We're Not Ready For Sign-Ups...Yet.");
-    }
-  </script>
 
 </body>
 </html>
